objects/Price_Posting_Status__c.object
<CustomObject>
    <description>This is a generic template for Custom Object. With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>ERP_Sales_Price_SAP__c</fullName>
        <label>ERP Sales Prices - SAP</label>
        <referenceTo>ERP_Sales_Prices_SAP__c</referenceTo>
        <relationshipLabel>Price Posting Status</relationshipLabel>
        <relationshipName>Price_Posting_Status</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Legacy_Pricing_Util_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent-child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy Pricing Util SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Novus_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Stores Legacy Id</description>
        <externalId>true</externalId>
        <label>Novus External Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Price_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Record Id</label>
        <referenceTo>ERP_Sales_Prices_SAP__c</referenceTo>
        <relationshipLabel>Price Posting Status (Price Record Id)</relationshipLabel>
        <relationshipName>Price_Posting_Status1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>TextArea</type>
    </fields>
    <label>Price Posting Status</label>
    <nameField>
        <label>Price Posting Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Posting Status</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>